fix layout bugs vlast

--- a/src/scss/_base/_mixins.scss
+++ b/src/scss/_base/_mixins.scss
@@ -56,7 +56,6 @@
   font-size: 30px;
   line-height: 32px;
   font-weight: 700;
-  letter-spacing: normal;
 
   @include minScreen(1440px) {
     font-size: 45px;
@@ -78,6 +77,7 @@
 @mixin caption {
   font-size: 14px;
   line-height: 16px;
+  font-weight: 400;
 
   @include minScreen(1440px) {
     font-size: 16px;
