--- a/src/scss/_base/_reset.scss
+++ b/src/scss/_base/_reset.scss
@@ -9,7 +9,6 @@
 body {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
-  letter-spacing: .02em;
 }
 
 h1,
